package ProtobufPackets;
syntax = "proto3";

message PackHeaderIn
{
		bool serverRead = 1;
		string locKey = 2;
		repeated uint32 sendToIDs = 3;
		uint32 dataSize = 4;
}

message PackHeaderOut
{
		string locKey = 1;
		uint32 sentFromID = 2;
		uint32 dataSize = 3;
}

message PackA0
{
		double longitude = 1;
		double latitude = 2;
		repeated uint32 menuItems = 3;
		string name = 4;
}

message PackA1
{
		uint32 aScore = 1;
}

message PackA2
{
	 bool confirm = 1;
}

message PackA3
{
		bool confirm = 1;
}

message PackA4
{
		bool success = 1;
		string orderToken = 2;
}

message PackB0
{
		bool confirm = 1;
}

message PackB1
{
		repeated uint32 itemID = 1;
		repeated string itemName = 2;
		repeated float itemPrice = 3;
}

message PackD0
{
		string userName = 1;
		string pwd = 2;
}

message PackD1
{
		bool success = 1;
		string error = 2;
		string token = 3;
}

message PackE0
{
		string userName = 1;
		string pwd = 2;
		string email = 3;
}

message PackE1
{
		bool success = 1;
		string msg = 2;
		string creationToken = 3;
}

message PackF0
{
		string userName = 1;
		string token = 2;
}

message PackF1
{
		bool success = 1;
}

message PackG0
{
		bool confirm = 1;
}

message PackG1
{
		bool success = 1;
		repeated string itemNames = 2;
		repeated uint32 itemAmounts = 3;
		float totalCost = 4;
		double longitude = 5;
		double latitude = 6;
		uint32 orderID = 7;
		int32 orderTime = 8;
}

message PackG2
{
		uint32 orderID = 1;
		uint32 oState = 2;
}

message PackI0
{
		string emailToken = 1;
		string creationToken = 2;
}

message PackI1
{
		string emailToken = 1;
		string userName = 2;
		string pwd = 3;
}

message PackI2
{
		bool success = 1;
		string msg = 2;
		bool requestI1 = 3;
}